# Skyscope-Solana-MEV-Bot

./: Cargo.toml  README.md  WalletImport.css  WalletImport.tsx  app.rs  authentication.rs  build-macos.sh  check-repo.md  index.html  keystore.rs  main.rs  package.json  repo-structure.md  security.rs  skyscope_sentinel_poc.py  tauri.conf.json  trading.rs
frontend/: package.json  vite.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: WalletImport.tsx
src/: main.rs
src-tauri/src/: main.rs
src/arbitrage/: strategies.rs
src/common/: budget_manager.rs  constants.rs  mod.rs  qr_utils.rs  utils.rs
src/transactions/: create_transaction.rs  mod.rs  transfer_sol.rs
