[package]
name = "skyscope-solana-mev-bot"
version = "1.0.0"
edition = "2021"
authors = ["Skyscope Sentinel Intelligence"]
description = "A secure trading bot for Solana blockchain with PIN protection and secure wallet integration"
repository = "https://github.com/skyscope-sentinel/Skyscope-Solana-MEV-Bot"
license = "MIT"

[dependencies]
# Solana SDK and client libraries
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-transaction-status = "1.16.0"
solana-account-decoder = "1.16.0"

# Security libraries
argon2 = "0.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
rand = "0.8.5"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
bip39 = "2.0.0"

# CLI interface libraries
clap = { version = "4.3.0", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.4"
rpassword = "7.2.0"
qrcodegen = "1.8.0"

# Logging libraries
log = "0.4.17"
env_logger = "0.10.0"

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
thiserror = "1.0.40"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
dirs = "5.0.1"
tempfile = "3.5.0"

[dev-dependencies]
mockall = "0.11.4"
serial_test = "2.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
